--- a/로또추첨.html
+++ b/로또추첨.html
@@ -101,7 +101,8 @@
         #counter{
             width: 500px;
             position: absolute;
-            left: 250px;
+            top: 40px;
+            left: 0px;
         }
         nav{
             color: rgb(0, 0, 0);
@@ -185,7 +186,7 @@
         <p>아래의 버튼을 눌러서 번호를 추첨하세요~</p>
         <button id="create" onclick="create()" >번호 생성하기</button>
         <div id="box">
-            <h3 style="color: black; font-size: 12px;" id="counter">0</h3>
+            <h1 style="color: black; font-size: 20px;" id="counter">0</h1>
                 <p id="one">0</p>
                 <p id="two">0</p>
                 <p id="three">0</p>
