--- a/상점.html
+++ b/상점.html
@@ -28,7 +28,7 @@
         }
         a{text-decoration-line: none; color: white;}
         #ul2 {
-            margin-left: 850px;
+            margin-left: 950px;
             display: flex;
             justify-content: end;
         }
@@ -55,10 +55,16 @@
         #container{
             position: relative;
         }
+        #box0{
+            position: absolute;
+            top: 30px;
+            width: 30%;
+            left: 450px;
+        }
         #box1{
             position: absolute;
-            top: 100px;
-            left: 200px;
+            top: 200px;
+            left: 100px;
             width: 30%;
         }
         #box2{
@@ -79,14 +85,14 @@
         }
         #ulbox span{
             position: absolute;
-            font-size: 20px;
+            font-size: 18px;
         }
-        .span1{top: 10px; right: 80px;}
-        .span2{top: 85px; right: 80px;}
-        .span3{top: 160px; right: 80px;}
-        .span4{top: 230px; right: 80px;}
-        .span5{top: 305px; right: 80px;}
-        .span6{top: 370px; right: 80px;}
+        .span1{top: 10px; right: 70px;}
+        .span2{top: 85px; right: 70px;}
+        .span3{top: 160px; right: 70px;}
+        .span4{top: 230px; right: 70px;}
+        .span5{top: 305px; right: 70px;}
+        .span6{top: 375px; right: 70px;}
         #ulbox p{
             background-color: rgb(255, 225, 0);
             width: 85%;
@@ -99,7 +105,7 @@
     <nav>
         <p class="logo">번호 추첨기!!</p>
         <ul id="ul1">
-            <li><a href="로또추첨.html" style="color: black;">로또 번호 뽑기</a></li>
+            <li><a href="로또추첨.html" style="color: black;">돌아가기</a></li>
         </ul>
         
         <ul id="ul2">
@@ -107,6 +113,9 @@
         </ul>
     </nav>
     <section id="container">
+        <article id="box0">
+            <img src="말풍선.png" width="50%">
+        </article>
         <article id="box1">
             <img src="상점주인.jpg" width="100%">
         </article>
@@ -120,13 +129,13 @@
                     <p>문화상품권 5000원</p>
                     <span class="span2">가격 : 1000px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
                     <p>병준쌤과의 헬스</p>
-                    <span class="span3">가격 : 100px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
+                    <span class="span3">가격 : 5px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
                     <p>허동운의 연애 강의</p>
-                    <span class="span4">가격 : 100px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
-                    <p>민아쌤과 식사</p>
-                    <span class="span5">가격 : 100px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
+                    <span class="span4">가격 : 5000px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
+                    <p>민하쌤과 식사</p>
+                    <span class="span5">가격 : 10000px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
                     <p>민하쌤의 첫사랑 이야기</p>
-                    <span class="span6">가격 : 100px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
+                    <span class="span6">가격 : 99999px    <a href="#"onclick="zz()" style="color: black;">구매</a></span>
                 </ul>
             </form>
         </article>
